@@ -27,6 +27,10 @@ Core and builtins
 Library
 -------
 
+- Issue #1202: zlib.crc32 and zlib.adler32 no longer return different values
+  on 32-bit vs. 64-bit python interpreters.  Both were correct, but they now
+  both return a signed integer object for consistency.
+
 - Issue #1158: add %f format (fractions of a second represented as
   microseconds) to datetime objects.  Understood by both strptime and
   strftime.
